# StravAnalysis

./: .gitignore  .gitmodules  315FinalProj.ipynb  315MiniProj.ipynb  JenksNaturalBreaks2D.py  LSTMComplete.py  README.md  TitleTypeDesc.pkl  apiInterface.py  apiParser.py  brainstrava.py  clustering.py  dataCleaning.py  discretizePaths.py  example.json  nlpType copy.py  polylinennAutoencoder copy.py  polylinernnAutoencoder.py  predictWorkoutType.py  pyproject.toml  stravabrain.py  tcxParser.py  test_run.tcx  unGZAll.sh
Raw_Strava_Data_Backup/: activities.csv  applications.csv  comments.csv  connected_apps.csv  contacts.csv  email_preferences.csv  favorites.csv  flags.csv  followers.csv  following.csv  general_preferences.csv  global_challenges.csv  goals.csv  group_challenges.csv  local_legend_segments.csv  logins.csv  media.csv  memberships.csv  messaging.json  metering.csv  mobile_device_identifiers.csv  monthly_recap_achievements.csv  orders.csv  posts.csv  profile.csv  reactions.csv  routes.csv  segments.csv  shoes.csv  social_settings.csv  starred_routes.csv  starred_segments.csv  visibility_settings.csv
Raw_Strava_Data_Backup/activities/: 3989099861.gpx  4399118334.gpx  4469168614.gpx  7024301651.gpx  7166612287.gpx  7252917171.gpx  7366002413.gpx  7395629549.gpx  7656890032.gpx  7760391828.gpx  8002750272.gpx  8309070816.gpx  8322447960.gpx  8322837084.gpx  8343063453.gpx  8343329647.gpx  8350203893.gpx  8398492978.gpx  8505722569.gpx
Raw_Strava_Data_Backup/routes/: 1.gpx  10.gpx  100.gpx  101.gpx  102.gpx  103.gpx  104.gpx  (+127 more)
src/: clustering.py  dataCleaning.py
(+3 files in other folders)
