[project]
name = "example_package_tsurbs"
version = "0.0.1"
authors = [
  { name="Theo Urban", email="theo.s.urban@gmail.com" },
]
description = "A package for parsing strava data"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/tsurbs/StravAnalysis"